# Nonogram

./: .gitignore  CMakeLists.txt  DATABASE.md  PROJECT.md  generate_level.cpp  graph_board.cpp  graph_board.h  play_window.cpp  play_window.h  rules_window.cpp  rules_window.h  wrapper.cpp  wrapper.h
db/: nonogram.db
old/: database.cpp  database.h  graph_board.cpp  graph_board.h  logic_board.cpp  logic_board.h  play_window.cpp  play_window.h
src/: Choose_level.cpp  Choose_level.h  GUI.h  Generate_level.cpp  Generate_level.h  Lb.h  Main_window.cpp  Main_window.h  Widgets.h  Wwb.h  buttons.cpp  buttons.h  choose_level.cpp  choose_level.h  constants.h  create_level.cpp  create_level.h  database.cpp  database.h  fltk.h  generate_level.cpp  generate_level.h  grammar.h  graph_board.cpp  graph_board.h  helping_func.cpp  level.cpp  level.h  logic_board.cpp  logic_board.h  main.cpp  main_window.cpp  main_window.h  nonogram_logic.cpp  nonogram_logic.h  play_window.cpp  play_window.h  rules_window.cpp  rules_window.h  wrapper.cpp  (+1 more)
src/Graph_classes/: choose_level.cpp  choose_level.h  generate_level.cpp  generate_level.h  graph_board.cpp  graph_board.h  main_window.cpp  main_window.h  play_window.cpp  play_window.h  rules_window.cpp  rules_window.h  wrapper.cpp  wrapper.h
src/Graph_lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Simple_window.h  Window.cpp  fltk.h
src/Logic_classes/: database.cpp  database.h  level.cpp  level.h  logic_board.h  nonogram_logic.cpp
